--- a/droneblocks.css
+++ b/droneblocks.css
@@ -1,69 +1,74 @@
+.blocklyTreeRow {
+  height: 30px !important;
+  line-height: 30px !important;
+}
+
 div#\:1 {
-  background-color: #115CA6 !important;
+  background-color: #264653 !important;
   padding: 10px !important;
   color: #FFFFFF !important;
 }
 
 div#\:1 .blocklyTreeRow:hover {
-  background-color: #00133B !important;
+  background-color: #172B33 !important;
 }
 
 div#\:1 .blocklyTreeSelected {
-  background-color: #00133B !important;
+  background-color: #172B33 !important;
 }
 
 div#\:2 {
-  background-color: #74A611 !important;
+  background-color: #2A9D8F !important;
   padding: 10px !important;
   color: #FFFFFF !important;
 }
 
 div#\:2 .blocklyTreeRow:hover {
-  background-color: #4C8500 !important;
+  background-color: #1E7268 !important;
 }
 
 div#\:2 .blocklyTreeSelected {
-  background-color: #4C8500 !important;
+  background-color: #1E7268 !important;
 }
 
 div#\:3 {
-  background-color: #1192A6 !important;
+  background-color: #E9C46A !important;
   padding: 10px !important;
   color: #FFFFFF !important;
 }
 
 div#\:3 .blocklyTreeRow:hover {
-  background-color: #0073BA !important;
+  background-color: #AD924E !important;
 }
 
 div#\:3 .blocklyTreeSelected {
-  background-color: #0073BA !important;
+  background-color: #AD924E !important;
 }
 
 div#\:4 {
-  background-color: #A50808 !important;
+  background-color: #F4A261 !important;
   padding: 10px !important;
   color: #FFFFFF !important;
 }
 
 div#\:4 .blocklyTreeRow:hover {
-  background-color: #8A0F0F !important;
+  background-color: #B27747 !important;
 }
 
 div#\:4 .blocklyTreeSelected {
-  background-color: #8A0F0F !important;
+  background-color: #B27747 !important;
 }
 
 div#\:5 {
-  background-color: #6A11A6 !important;
+  background-color: #E76F51 !important;
   padding: 10px !important;
   color: #FFFFFF !important;
 }
 
 div#\:5 .blocklyTreeRow:hover {
-  background-color: #490C72 !important;
+  background-color: #B2553E !important;
 }
 
 div#\:5 .blocklyTreeSelected {
-  background-color: #490C72 !important;
+  background-color: #B2553E !important;
 }
