--- a/droneblocks.css
+++ b/droneblocks.css
@@ -32,43 +32,71 @@ div#\:2 .blocklyTreeSelected {
 }
 
 div#\:3 {
-  background-color: #E9C46A !important;
+  background-color: #64c2d9 !important;
   padding: 10px !important;
   color: #FFFFFF !important;
 }
 
 div#\:3 .blocklyTreeRow:hover {
-  background-color: #AD924E !important;
+  background-color: #428a9c !important;
 }
 
 div#\:3 .blocklyTreeSelected {
-  background-color: #AD924E !important;
+  background-color: #428a9c !important;
 }
 
 div#\:4 {
-  background-color: #F4A261 !important;
+  background-color: #E9C46A !important;
   padding: 10px !important;
   color: #FFFFFF !important;
 }
 
 div#\:4 .blocklyTreeRow:hover {
-  background-color: #B27747 !important;
+  background-color: #AD924E !important;
 }
 
 div#\:4 .blocklyTreeSelected {
-  background-color: #B27747 !important;
+  background-color: #AD924E !important;
 }
 
 div#\:5 {
-  background-color: #E76F51 !important;
+  background-color: #5a65a7 !important;
   padding: 10px !important;
   color: #FFFFFF !important;
 }
 
 div#\:5 .blocklyTreeRow:hover {
-  background-color: #B2553E !important;
+  background-color: #373e66 !important;
 }
 
 div#\:5 .blocklyTreeSelected {
+  background-color: #373e66 !important;
+}
+
+div#\:6 {
+  background-color: #a65a80 !important;
+  padding: 10px !important;
+  color: #FFFFFF !important;
+}
+
+div#\:6 .blocklyTreeRow:hover {
+  background-color: #723e58 !important;
+}
+
+div#\:6 .blocklyTreeSelected {
+  background-color: #723e58 !important;
+}
+
+div#\:7 {
+  background-color: #E76F51 !important;
+  padding: 10px !important;
+  color: #FFFFFF !important;
+}
+
+div#\:7 .blocklyTreeRow:hover {
+  background-color: #B2553E !important;
+}
+
+div#\:7 .blocklyTreeSelected {
   background-color: #B2553E !important;
 }
