--- a/droneblocks.css
+++ b/droneblocks.css
@@ -1,3 +1,34 @@
+/* General styling */
+html, body {
+  height: 100%;
+  margin: 0;
+}
+body {
+  background-color: #fff;
+  font-family: sans-serif;
+  overflow: hidden;
+}
+h1 {
+  font-weight: normal;
+  font-size: 140%;
+}
+table {
+  height: 100%;
+  width: 100%;
+}
+#blocklyArea {
+  height: 92%;
+}
+
+#startButton {
+  background-color: #7FB800;
+  padding: 10px;
+  text-decoration: none;
+  color: #FFFFFF;
+}
+/* End general styling */
+
+/* Begin block category styling */
 .blocklyTreeRow {
   height: 30px !important;
   line-height: 30px !important;
@@ -100,3 +131,4 @@ div#\:7 .blocklyTreeRow:hover {
 div#\:7 .blocklyTreeSelected {
   background-color: #B2553E !important;
 }
+/* End block category styling */
