--- a/droneblocks.css
+++ b/droneblocks.css
@@ -20,13 +20,6 @@ table {
   height: 92%;
 }
 
-#startButton {
-  background-color: #7FB800;
-  padding: 10px;
-  text-decoration: none;
-  color: #FFFFFF;
-}
-
 #helpButton {
   background-color: #7FB800;
   padding: 10px;
@@ -139,3 +132,42 @@ div#\:7 .blocklyTreeSelected {
   background-color: #B2553E !important;
 }
 /* End block category styling */
+
+div#blocklyArea {
+  float: left;
+  width: 50%;
+}
+
+div#codeView {
+  background: #E7E7E8;
+  float: left;
+  border: 1px solid #FF0000;
+  width: 48%;
+  padding: 10px;
+  font-family: monospace;
+}
+
+div#buttons {
+  clear: both;
+  border: 1px solid #00FF00;
+  height: 50px;
+}
+
+div#buttons #codeViewButton {
+  float: left;
+  background-color: #E83F6F;
+  padding: 10px;
+  text-decoration: none;
+}
+
+div#buttons #previewButton {
+  float: right;
+  background-color: #7FB800;
+  padding: 10px;
+  text-decoration: none;
+}
+
+div#buttons #previewButton a, div#buttons #codeViewButton a{
+  color: #FFFFFF;
+  text-decoration: none;
+}
