--- a/droneblocks.css
+++ b/droneblocks.css
@@ -135,13 +135,20 @@ div#\:7 .blocklyTreeSelected {
 
 div#blocklyArea {
   float: left;
+  width: 100%;
+}
+
+div#blocklyArea.half {
+  width: 50% !important;
+}
+
+div#blocklyArea.full {
   width: 50%;
 }
 
 div#codeView {
   background: #E7E7E8;
   float: left;
-  border: 1px solid #FF0000;
   width: 48%;
   padding: 10px;
   font-family: monospace;
@@ -170,4 +177,12 @@ div#buttons #previewButton {
 div#buttons #previewButton a, div#buttons #codeViewButton a{
   color: #FFFFFF;
   text-decoration: none;
+}
+
+div#codeView.hidden {
+  display: none;
+}
+
+div#codeView.visible {
+  display: block;
 }
