--- a/droneblocks.css
+++ b/droneblocks.css
@@ -16,9 +16,6 @@ table {
   height: 100%;
   width: 100%;
 }
-#blocklyArea {
-  height: 92%;
-}
 
 #helpButton {
   background-color: #7FB800;
@@ -136,6 +133,7 @@ div#\:7 .blocklyTreeSelected {
 div#blocklyArea {
   float: left;
   width: 100%;
+  height: 98%;
 }
 
 div#blocklyArea.half {
@@ -154,11 +152,6 @@ div#codeView {
   font-family: monospace;
 }
 
-div#buttons {
-  clear: both;
-  height: 50px;
-}
-
 div#codeViewButton {
   position: absolute;
   top: 0;
@@ -174,9 +167,9 @@ div#codeViewButton a {
   text-decoration: none;
 }
 
-div#buttons #previewButton {
+div#previewButton {
   position: absolute;
-  bottom: 0;
+  bottom: 10px;
   right: 0;
   background-color: #7FB800;
   padding: 10px;
@@ -184,7 +177,7 @@ div#buttons #previewButton {
   z-index: 101;
 }
 
-div#buttons #previewButton a {
+div#previewButton a {
   color: #FFFFFF;
   text-decoration: none;
 }
