--- a/droneblocks.css
+++ b/droneblocks.css
@@ -133,7 +133,7 @@ div#\:7 .blocklyTreeSelected {
 div#blocklyArea {
   float: left;
   width: 100%;
-  height: 98%;
+  height: 100%;
 }
 
 div#blocklyArea.half {
@@ -147,39 +147,9 @@ div#blocklyArea.full {
 div#codeView {
   background: #E7E7E8;
   float: left;
-  width: 40%;
+  width: 45%;
   padding: 10px;
   font-family: monospace;
-}
-
-div#codeViewButton {
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: #E83F6F;
-  padding: 10px;
-  text-decoration: none;
-  z-index: 100;
-}
-
-div#codeViewButton a {
-  color: #FFFFFF;
-  text-decoration: none;
-}
-
-div#previewButton {
-  position: absolute;
-  bottom: 10px;
-  right: 0;
-  background-color: #7FB800;
-  padding: 10px;
-  text-decoration: none;
-  z-index: 101;
-}
-
-div#previewButton a {
-  color: #FFFFFF;
-  text-decoration: none;
 }
 
 div#codeView.hidden {
@@ -188,4 +158,11 @@ div#codeView.hidden {
 
 div#codeView.visible {
   display: block;
+}
+
+a#hamburger {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  z-index: 1;
 }
